--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="main-nav">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#work">Our Work</a></li>
+            <li><a href="#work">Work</a></li>
             <li><a href="#blog">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
